--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>Jinsoo's Travel Map</h1>
 
   <p>
-    여기서는 내ㅇㅇ가 다녀온 장소들의 위치 정보를 기반으로 만들어진 <strong>히트맵(heatmap)</strong>을 볼 수 있습니다.
+    여기서는 제가 있었던 장소들의 위치 정보를 기반으로 만들어진 <strong>히트맵(heatmap)</strong>을 볼 수 있습니다.
     구글 포토에 저장된 사진들의 GPS 데이터를 활용하여 자동으로 생성되며, 가장 자주 방문한 지역은 짙은 색으로 표시됩니다.
     html은 잘 모르지만 chatGPT와 Claude AI를 통해 구현했습니다.
   </p>
